# water-agent-lab

./: README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: drought_mvp.yaml  extreme_drought.yaml  mild_drought.yaml  severe_drought.yaml
docs/: results.md
src/water_agent_lab/: __init__.py  cli.py  config.py  evaluator.py  exporter.py  models.py  plotter.py  simulator.py
tests/: test_cli.py  test_config.py  test_evaluator.py  test_exporter.py  test_models.py  test_plotter.py  test_simulator.py
